# Robotic_Depowdering

./: .gitignore  .gitmodules  Putting a part in RViz.md  README.md  Running_in_docker.md  docker-compose.yml  install_Fast-DDS.patch  install_test_part.py  round_U_surface_normals.csv  software_versions.md
config/: dev.yaml
docker/: Dockerfile
extra_parts/: RoundedU.stl
install/: local_setup.sh  setup.sh
install/flexiv_bringup/share/flexiv_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/flexiv_controllers/include/flexiv_controllers/: cartesian_pose_sensor.hpp  external_tcp_wrench_broadcaster.hpp  gpio_controller.hpp  joint_impedance_controller.hpp  tcp_pose_state_broadcaster.hpp
install/flexiv_controllers/share/flexiv_controllers/: flexiv_controllers_plugins.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/flexiv_description/share/flexiv_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/flexiv_gazebo/share/flexiv_gazebo/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/flexiv_hardware/include/flexiv_hardware/: flexiv_hardware_interface.hpp  visibility_control.h
install/flexiv_hardware/share/flexiv_hardware/: flexiv_hardware_interface_plugin.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/flexiv_moveit_config/share/flexiv_moveit_config/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/flexiv_msgs/share/flexiv_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/flexiv_test_nodes/lib/flexiv_test_nodes/: publisher_joint_trajectory_controller  sine_sweep_impedance_controller  sine_sweep_position_controller
install/flexiv_test_nodes/share/flexiv_test_nodes/: package.dsv  package.ps1  package.sh
log/: latest_build
src/: PickAndPlace.srv
src/flexiv_ros2/flexiv_bringup/config/: joint_trajectory_position_publisher.yaml  rizon_controllers.yaml
src/flexiv_ros2/flexiv_bringup/launch/: rizon_moveit.launch.py  rizon_with_object_pickup.launch.py
src/flexiv_ros2/flexiv_description/rviz/: view_rizon.rviz  view_rizon_object.rviz
src/flexiv_ros2/flexiv_description/urdf/: grav.urdf.xacro  rizon.urdf.xacro  rizon10.ros2_control.xacro  rizon4.ros2_control.xacro  rizon4_joints_links.xacro  rizon_macro.xacro  rizon_with_gripper.urdf.xacro
src/flexiv_ros2/flexiv_gazebo/: CMakeLists.txt  README.md  package.xml
src/flexiv_ros2/flexiv_gazebo/config/: ros_gz_bridge.yaml
src/flexiv_ros2/flexiv_gazebo/launch/: rizon_bringup_gazebo.launch.py
src/flexiv_ros2/flexiv_gazebo/urdf/: rizon.urdf.xacro
src/flexiv_ros2/flexiv_gazebo/worlds/: empty.world
src/gpd/: CMakeLists.txt  package.xml
src/gpd/src/: detect_grasps.cpp
src/rizon_pick_and_place/: CMakeLists.txt  package.xml  pick_and_place.md
src/rizon_pick_and_place/launch/: rizon_pick_and_place.launch.py
src/rizon_pick_and_place/src/: move_to_pose_service.cpp  pick_and_place_service.cpp  rizon_pick_and_place.cpp
src/rizon_pick_and_place/srv/: rizon_pick_and_place.srv
src/robotic_depowdering/: CMakeLists.txt  package.xml
src/robotic_depowdering/cfg/: hand_geometry_rizon4s.cfg  rizon_4s.cfg
src/robotic_depowdering/launch/: loop_collisions.launch.py  pick_up_object.launch.py  robotic_depowdering.launch.py
src/robotic_depowdering/rviz/: empty.rviz  new.rviz
src/robotic_depowdering/src/: a.out  add_two_ints_server.cpp  e1Out.txt  gpd_interface.cpp  gpd_interface.hpp  gpd_service.cpp  gripper_test.cpp  loop_parts_collision_demo.cpp  moveit_collision_detection_demo.cpp  obj_loader_test.cpp  pick_up_object.cpp
src/robotic_depowdering/test_parts/: 900_N_Michigan.stl  Buckle.bin.stl  Buckle.obj.bin.stl  Buckle.stl  Changes to test parts.txt  Chase.stl  ClampBar85.obj.bin.stl  ClampBar85.stl  ClampJaw.obj.bin.stl  ClampJaw.stl  Disconnected_torus.obj.bin.stl  Disconnected_torus.stl  Dremel_Impeller.obj.bin.stl  HollowCube.obj.bin.stl  HollowCube.stl  Hollow_Pyramid.obj.bin.stl  Hollow_Pyramid.stl  Hollow_Pyramid_with_8mm_Center_Hole.stl  Hollow_square.obj.bin.stl  Hollow_square.stl  Input_Pinion.obj.bin.stl  Input_Pinion.stl  IntermediateGear-NoDrum-OnBearings.obj.bin.stl  IntermediateGear-NoDrum-OnBearings.stl  IntermediateGear-WithDrum-OnBearings.obj.bin.stl  IntermediateGear-WithDrum-OnBearings.stl  LetterE.obj.bin.stl  LetterE.stl  Magneto_Helmet.obj.bin.stl  MinuteGear-NoDrum-OnConcentricShaft.obj.bin.stl  MinuteGear-NoDrum-OnConcentricShaft.stl  Octocat-v2.obj.bin.stl  Rounded_U.obj.bin.stl  Side_Gear.obj.bin.stl  Side_Gear.stl  Side_Gear_No_Back_Cut.obj.bin.stl  Side_Gear_No_Back_Cut.stl  Square_U.obj.bin.stl  Square_U.stl  TestDonutMedium.obj.bin.stl  (+23 more)
src/robotic_depowdering/test_parts_vcpd_urdf/Cube0.1x0.1/: Cube0.1x0.1.urdf
src/robotic_depowdering/test_parts_vcpd_urdf/quarter_counting_tube/: quarter_counting_tube.urdf
src/robotic_depowdering/test_parts_vcpd_urdf/triplescrew_bolt60/: triplescrew_bolt60.urdf
src/robotic_depowdering_interfaces/: CMakeLists.txt  package.xml
src/robotic_depowdering_interfaces/srv/: GpdGrasp.srv  MoveToPose.srv  VCPDGrasp.srv
src/vcpd/: grasp_matrix.m  package.xml  requirements.txt  setup.cfg  setup.py
src/vcpd/config/: config.json
src/vcpd/test_parts_grasps_out/: Buckle_info.json  Buckle_quaternions.npy  Buckle_x_directions.npy  Buckle_y_directions.npy  Buckle_z_directions.npy  ClampJaw_centers.npy  ClampJaw_info.json  ClampJaw_quaternions.npy  ClampJaw_vertex_ids.npy  ClampJaw_widths.npy  ClampJaw_x_directions.npy  ClampJaw_y_directions.npy  ClampJaw_z_directions.npy  Input_Pinion_centers.npy  Input_Pinion_info.json  Input_Pinion_quaternions.npy  Input_Pinion_vertex_ids.npy  Input_Pinion_widths.npy  Input_Pinion_x_directions.npy  Input_Pinion_y_directions.npy  Input_Pinion_z_directions.npy
src/vcpd/vcpd/: vcpd_service.py
(+263 files in other folders)
